@@ -7,43 +7,7 @@
 // to hook into all ES server interactions.
 
 const { getDBDestination } = require('../../context')
-
-// URL paths matching the following pattern will have their query params and
-// request body captured in the span (as `context.db.statement`). We match
-// a complete URL path component to attempt to avoid accidental matches of
-// user data, like `GET /my_index_search/...`.
-const pathIsAQuery = /\/(_search|_msearch|_count|_async_search|_sql|_eql)(\/|$)/
-
-function setDbContext (span, params) {
-  if (pathIsAQuery.test(params.path)) {
-    // Some ES endpoints, e.g. '_search', support both query params and a body.
-    // We encode both into 'span.context.db.statement', separated by '\n\n'
-    // if both are present. E.g. for a possible msearch:
-    //    search_type=query_then_fetch&typed_keys=false
-    //
-    //    {}
-    //    {"query":{"query_string":{"query":"pants"}}}
-    //
-    // Note: A read of Transport.js suggests these will always be serialized
-    // strings, however the documented `TransportRequestParams` allows for
-    // non-strings, so we will be defensive.
-    const parts = []
-    if (params.querystring && typeof (params.querystring) === 'string') {
-      parts.push(params.querystring)
-    }
-    if (params.body && typeof (params.body) === 'string') {
-      parts.push(params.body)
-    }
-    const statement = parts.join('\n\n')
-
-    if (statement) {
-      span.setDbContext({
-        type: 'elasticsearch',
-        statement
-      })
-    }
-  }
-}
+const { setElasticsearchDbContext } = require('../../elasticsearch-shared')
 
 module.exports = function (elasticsearch, agent, { version, enabled }) {
   if (!enabled) {
@@ -108,7 +72,9 @@ module.exports = function (elasticsearch, agent, { version, enabled }) {
           return
         }
 
-        setDbContext(span, request.params)
+        setElasticsearchDbContext(span, request.params.path,
+          request.params.querystring, request.params.body)
+
         const { hostname, port } = result.meta.connection.url
         span.setDestinationContext(
           getDBDestination(span, hostname, port))
