@@ -1,7 +1,10 @@
 'use strict'
 
+const querystring = require('querystring')
+
 var shimmer = require('../shimmer')
 var { getDBDestination } = require('../context')
+const { setElasticsearchDbContext } = require('../elasticsearch-shared')
 
 var queryRegexp = /_((search|msearch)(\/template)?|count)$/
 
@@ -19,33 +22,22 @@ module.exports = function (elasticsearch, agent, { enabled }) {
       var id = span && span.transaction.id
       var method = params && params.method
       var path = params && params.path
-      var query = params && params.query
-      var body = params && params.body
 
       agent.logger.debug('intercepted call to elasticsearch.Transport.prototype.request %o', { id: id, method: method, path: path })
 
       if (span && method && path) {
         span.name = `Elasticsearch: ${method} ${path}`
 
-        if (queryRegexp.test(path)) {
-          const statement = Array.isArray(body)
-            ? body.map(JSON.stringify).join('\n')
-            : JSON.stringify(body || query)
+        setElasticsearchDbContext(span, path, params && params.query,
+          params && params.body)
 
-          if (statement) {
-            span.setDbContext({
-              type: 'elasticsearch',
-              statement
-            })
-          }
-          // get the remote host information from elasticsearch Transport options
-          const transportConfig = this._config
-          let host, port
-          if (typeof transportConfig === 'object' && transportConfig.host) {
-            [host, port] = transportConfig.host.split(':')
-          }
-          span.setDestinationContext(getDBDestination(span, host, port))
+        // Get the remote host information from elasticsearch Transport options.
+        const transportConfig = this._config
+        let host, port
+        if (typeof transportConfig === 'object' && transportConfig.host) {
+          [host, port] = transportConfig.host.split(':')
         }
+        span.setDestinationContext(getDBDestination(span, host, port))
 
         if (typeof cb === 'function') {
           var args = Array.prototype.slice.call(arguments)
