@@ -15,9 +15,16 @@ endif::[]
 [float]
 ===== Features
 
-* feat: Add automatic instrumentation of the new
-  https://github.com/elastic/elasticsearch-js[@elastic/elasticsearch client]
-  {pull}1877[#1870]
+* feat: Add automatic instrumentation of the new https://github.com/elastic/elasticsearch-js[@elastic/elasticsearch client] {pull}1877[#1870]
+
+  This change included some changes to the instrumentation of the old
+  "elasticsearch" client to commonalize:
+  - "span.context.destination" is set on all Elasticsearch spans, not just a
+    subset of query-like API endpoints.
+  - For query-like API endpoints (e.g. `/_search`), the capturing of query details
+    on "span.context.db.statement" has changed (a) to include *both* the
+    query params and the request body if both exist (separated by `\n\n`) and
+    (b) to *URL encode* the query params, rather than JSON encoding.
 
 * feat: transactionIgnoreUrl wildcard matching {pull}1870[#1870] +
   Allows users to ignore URLs using simple wildcard matching patterns that behave
